--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.5.1",
+    "@react-navigation/drawer": "6.6.3",
+    "@react-navigation/native": "6.1.7",
+    "@react-navigation/native-stack": "6.9.13",
+    "@reduxjs/toolkit": "1.9.5",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-paper": "5.10.6",
+    "react-native-reanimated": "3.5.3",
+    "react-native-safe-area-context": "4.7.2",
+    "react-native-screens": "3.25.0",
+    "react-native-vector-icons": "10.0.0",
+    "react-redux": "8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
