--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@reduxjs/toolkit": "1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "2.13.1",
     "react-native-paper": "5.10.6",
     "react-native-reanimated": "3.5.3",
     "react-native-safe-area-context": "4.7.2",
     "react-native-screens": "3.25.0",
     "react-native-vector-icons": "10.0.0",
-    "react-redux": "8.1.2"
+    "react-redux": "8.1.2",
+    "redux": "4.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.20.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "7.20.0",
     "@babel/runtime": "7.20.0",
     "@react-native/eslint-config": "0.72.2",
