--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android:dev": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start:dev": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -35,7 +35,7 @@
     "@react-native/metro-config": "0.72.11",
     "@tsconfig/react-native": "3.0.0",
     "@types/react": "18.0.24",
-    "@types/react-native-vector-icons": "^6.4.14",
+    "@types/react-native-vector-icons": "6.4.14",
     "@types/react-test-renderer": "18.0.0",
     "babel-jest": "29.2.1",
     "eslint": "8.19.0",
