--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "2.13.1",
+    "react-native-honeywell-scanner-v2": "1.1.6",
     "react-native-paper": "5.10.6",
     "react-native-reanimated": "3.5.3",
     "react-native-safe-area-context": "4.7.2",
