--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "jsx":"react",
+    "strict": true,
+    "paths": {
+      "react": [ "./node_modules/@types/react" ]
+    }
+  }
 }
