--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "6.1.7",
     "@react-navigation/native-stack": "6.9.13",
     "@reduxjs/toolkit": "1.9.5",
+    "@tanstack/react-query": "^5.8.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "2.13.1",
@@ -34,6 +35,7 @@
     "@babel/runtime": "7.20.0",
     "@react-native/eslint-config": "0.72.2",
     "@react-native/metro-config": "0.72.11",
+    "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tsconfig/react-native": "3.0.0",
     "@types/react": "18.0.24",
     "@types/react-native-vector-icons": "6.4.14",
