--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android:dev": "react-native run-android",
+    "android:dev": "npx react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start:dev": "react-native start",
+    "start:dev": "npx react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -14,8 +14,9 @@
     "@react-navigation/drawer": "6.6.3",
     "@react-navigation/native": "6.1.7",
     "@react-navigation/native-stack": "6.9.13",
-    "@reduxjs/toolkit": "1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "2.13.1",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "3.5.3",
     "react-native-safe-area-context": "4.7.2",
     "react-native-screens": "3.25.0",
+    "react-native-ssl-public-key-pinning": "^1.1.3",
     "react-native-vector-icons": "10.0.0",
     "react-redux": "8.1.2",
     "redux": "4.2.1"
